Add flower.html file

--- a/flower.html
+++ b/flower.html
@@ -13,7 +13,8 @@
     <div id="lyrics">
      
     </div>
-    <h1 class="titulo">¡Feliz Cumpleaños!</h1>
+    <h1 class="titulo">Estas flores amarillas son un reflejo de la alegría que traes a mi vida. <br> <br>
+      Gracias por iluminar mis días con tu presencia.</h1>
   
     <div class="night"></div>
     <div class="flowers">
@@ -328,5 +329,4 @@
     <script src="anim.js"></script>
     <script src="main.js"></script>
   </body>
-
 </html>
